kubernetes/rpc/00-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-rpc-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/rpc
