kubernetes/rpc/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpc-service
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rpc-service
  template:
    metadata:
      labels:
        app: rpc-service
    spec:
      containers:
      - name: rpc-service
        image: npool/linera-respeer:latest
        imagePullPolicy: Always
        command: ["/bin/sh", "-c", "./rpc-entrypoint.sh"]
        volumeMounts:
        - name: rpc
          mountPath: /wallet
      volumes:
      - name: rpc
        persistentVolumeClaim:
          claimName: rpc-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: rpc-service
  namespace: kube-system
spec:
  ports:
    - name: rpc-service
      port: 30080
      targetPort: 30080
    - name: rpc-metrics
      port: 30082
      targetPort: 30082
  selector:
    app: rpc-service
