kubernetes/rpc/03-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rpc-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: rpc-service
    k8s.kuboard.cn/workload: rpc-service
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-strip-rpc-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.testnet-conway.rpc.respeer.ai'
        - testnet-conway.rpc.respeer.ai
      secretName: testnet-conway-rpc-respeer-ai-tls
  rules:
    - host: api.testnet-conway.rpc.respeer.ai
      http:
        paths:
          - path: /
            backend:
              serviceName: rpc-service
              servicePort: 30080
